--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=hr-payroll
 server.port=8101
+
+spring:
+  cloud:
+    loadbalancer:
+       ribbon:
+        enable: true
+
+hr-worker.ribbon.listOfServers=localhost:8001,localhost:8002
